[package]
name = "rustbc"
version = "0.1.0"
authors = ["tony <z-l-8@hotmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
notify = "4.0.17"
serde_json = "1.0"
config = "0.11"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7.0"
curl = "0.4.38"